# Tienda

./: README.md  com.github.ffrancoc.Tienda.json  meson.build  pypi-dependencies.json
data/: com.github.ffrancoc.Tienda.appdata.xml.in  com.github.ffrancoc.Tienda.desktop.in  com.github.ffrancoc.Tienda.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  tienda.gresource.xml  tienda.in
src/css/: style.css
src/db/: database.py
src/gtk/: home-view.blp  login.blp  user-view.blp  window.blp
src/view/: home.py  login.py  user.py  window.py
src/widgets/: dialogs.py
